crates/slipway-core/tests/compile_fail/text_selection_private_bypass.rs
use slipway_core::{CaretSet, TextSelectionPolicyDeclaration, WidgetId};

fn main() {
    let target = WidgetId::from("text");

    let _carets = CaretSet {
        carets: Vec::new(),
        primary: 0,
    };

    let _selection = TextSelectionPolicyDeclaration {
        target,
        selection: None,
        carets: CaretSet::single(0),
        editable: true,
        diagnostics: Vec::new(),
    };
}